--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
                                     </button>
                                     <div class="collapse" id="reportes-collapse">
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                            <li>@Html.ActionLink("Rep1", "AnalisisActivosOciosos", "Inteligencia", null, new { @class = "link-dark rounded", @id = "Rep1" })</li>
+                                            <li>@Html.ActionLink(Traducciones["ReporteAsignacionActivos"].Texto, "ReporteAsignacionActivos", "Reportes", null, new { @class = "link-dark rounded", @id = "Rep1" })</li>
                                             <li>@Html.ActionLink(Traducciones["AnalisisColaboradorVsRecursos"].Texto, "AnalisisColaboradorActivos", "Inteligencia", null, new { @class = "link-dark rounded", @id = "Rep2" })</li>
 
                                         </ul>
