--- a/UI/Views/AsignacionActivo/Index.cshtml
+++ b/UI/Views/AsignacionActivo/Index.cshtml
@@ -26,7 +26,7 @@
                         <input type="submit" value="@Traducciones["Filtrar"].Texto" class="btn btn-sm btn-outline-secondary" />
 
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                    <a class="btn btn-sm btn-outline-secondary" href="@Url.Action("ExportarExcel","AsignacionActivo")"><i class="fa fa-download" aria-hidden="true"></i> @Traducciones["Exportar"].Texto</a>
                         <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "AsignacionActivo", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
                     </div>
                     }
