--- a/UI/Views/Marca/Index.cshtml
+++ b/UI/Views/Marca/Index.cshtml
@@ -20,7 +20,7 @@
                        @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "", @placeholder = @Traducciones["Buscar"].Texto })
 
                  
-                    <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                    <a class="btn btn-sm btn-outline-secondary" href="@Url.Action("ExportarExcel","Marca")"><i class="fa fa-download" aria-hidden="true"></i> @Traducciones["Exportar"].Texto</a>
                     <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Marca", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
                 </div>
                 }
