--- a/UI/Views/AsignacionActivo/Create.cshtml
+++ b/UI/Views/AsignacionActivo/Create.cshtml
@@ -18,7 +18,7 @@
 
 
 
-    <div class="container-fluid pull-left" style="max-width:1024px">
+    <div class="container-fluid ">
 
 
 
@@ -30,10 +30,10 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            <div class="row gy-2 gx-3 align-items-center">
+            <div class="row g-3">
 
 
-                <div class=" col-auto">
+                <div class="col-md-6">
 
                     <div class=" input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Detalle"].Texto</span>
@@ -44,14 +44,14 @@
                     </div>
                 </div>
 
-                <div class="col-auto">
+                <div class="col-md-6">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Dispositivo"].Texto</span>
                         @Html.DropDownListFor(model => model.Activo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Activos"], "Id", "DescripcionLarga"), new { @class = "form-control" })
                     </div>
                 </div>
 
-                <div class="col-auto">
+                <div class="col-md-6">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Colaborador"].Texto</span>
 
@@ -59,14 +59,14 @@
                     </div>
                 </div>
 
-                <div class="col-auto">
+                <div class="col-md-6">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Ubicacion"].Texto</span>
                         @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["TiposAsignacion"], "Id", "Descripcion"), " Seleccionar..", new { @class = "form-control" })
                     </div>
                 </div>
 
-                <div class="col-auto ">
+                <div class="col-md-6">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["FechaAsignacion"].Texto</span>
                         @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control datepicker", @autocomplete = "off" } })
