--- a/UI/Views/Reportes/ReporteAsignacionActivos.cshtml
+++ b/UI/Views/Reportes/ReporteAsignacionActivos.cshtml
@@ -23,20 +23,31 @@
     }
 
 
-    <div class="container-fluid">
-        @using (Html.BeginForm())
-        {
-            @Html.DropDownList("Colaborador", new SelectList(ViewBag.Colaboradores, "Id", "NombreCompleto"), new { @class = "" })
-
-            @Html.DropDownList("Estado", new SelectList(ViewBag.Estados, "Id", "Descripcion"), new { @class = "" })
-
-
-            @Html.TextBox("Desde", "", new { type = "date", @autocomplete = "off",@required="required" });
-            @Html.TextBox("Hasta", "", new { type = "date", @autocomplete = "off", @required = "required" });
-
-
-            <input type="submit" value="@Traducciones["GenerarReporte"].Texto" formtarget="_blank" class="btn btn-sm btn-outline-secondary" />
-
+<div class="container-fluid">
+    @using (Html.BeginForm())
+    {
+    <div class="row g-3">
+        <div class="col-md-6">
+            <label for="inputState" class="form-label">@Traducciones["Colaborador"].Texto</label>
+            @Html.DropDownList("Colaborador", new SelectList(ViewBag.Colaboradores, "Id", "NombreCompleto"), new { @class = "form-select" })
+        </div>
+        <div class="col-md-6">
+            <label for="inputState" class="form-label">@Traducciones["Estado"].Texto</label>
+            @Html.DropDownList("Estado", new SelectList(ViewBag.Estados, "Id", "Descripcion"), new { @class = "form-select" })
+        </div>
+        <div class="col-md-3">
+            <label for="inputState" class="form-label">@Traducciones["DesdeFechaAsignacion"].Texto</label>
+            @Html.TextBox("Desde", "", new { type = "date", @autocomplete = "off", @required = "required", @class = "form-control datepicker" })
+        </div>
+        <div class="col-md-3">
+            <label for="inputState" class="form-label">@Traducciones["HastaFechaAsignacion"].Texto</label>
+            @Html.TextBox("Hasta", "", new { type = "date", @autocomplete = "off", @required = "required", @class = "form-control datepicker" })
+        </div>
+        <div class="col-md-3">
+            <label for="inputState" class="form-label">&nbsp</label>
+            <input type="submit" value="@Traducciones["GenerarReporte"].Texto" formtarget="_blank" class="form-control btn btn-primary" />
+        </div>
+       </div>
 
         }
     </div>
