--- a/UI/Views/Marca/Create.cshtml
+++ b/UI/Views/Marca/Create.cshtml
@@ -17,7 +17,7 @@
 
 
 
-    <div class="container-fluid pull-left" style="max-width:1024px">
+    <div class="container-fluid" >
 
         @using (Html.BeginForm())
         {
@@ -28,7 +28,7 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-            <div class=" col-auto" style="max-width:450px">
+            <div class="col-md-6">
                 <div class=" input-group col-md-10">
                     <span class="input-group-text"> @Traducciones["Descripcion"].Texto</span>
                     @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -54,6 +54,6 @@
 
         window.onload = function () {
             document.getElementById('activos-collapse').className = 'show';
-            document.getElementById('Activos').className = 'btn-activo';
+            document.getElementById('Marcas').className = 'btn-activo';
         };
         </script>
