--- a/UI/Views/ProductoSoftware/Create.cshtml
+++ b/UI/Views/ProductoSoftware/Create.cshtml
@@ -17,37 +17,39 @@
 
 
 
-    <div class="container-fluid pull-left" style="max-width:1024px">
+    <div class="container-fluid">
 
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            <div class="row gy-2 gx-3 align-items-center">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="row g-3">
 
-                <div class="col-auto">
+                <div class="col-md-6">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Descripcion"].Texto</span>
                         @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="col-auto">
+                <div class="col-md-6">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Marca"].Texto</span>
                         @Html.DropDownListFor(model => model.Marca.Id, new SelectList((System.Collections.IEnumerable)ViewData["Marcas"], "Id", "Descripcion"), new { @class = "form-control" })
                     </div>
                 </div>
 
-                <br />
-                <div class="col-md-6">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
-                    </div>
+
+            </div>
+            <br />
+            <div class="col-md-6">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
                 </div>
             </div>
+
         }
 
 
